--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -53,3 +53,18 @@
     background-color: var(--orange);
     color: white;
 }
+
+/* mobile response */
+@media screen and(max-width:768px) {
+    .join{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .left-j{
+        font-size: x-large;
+        flex-direction: column;
+    }
+    .right-j{
+        padding: 2rem;
+    }
+}
