--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -86,3 +86,14 @@
     top: 10rem;
     right: 0rem;
 }
+
+/* mobile responsive */
+@media screen and (max-width: 768px) {
+    .plans{
+        flex-direction: column;
+    }
+    .plan:nth-child(2){
+        transform: none;
+    }
+
+}
