--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -76,3 +76,36 @@
     width: 1.5rem;
     cursor: pointer;
 }
+
+/* mobile response */
+@media screen and(max-width:768px) {
+    .testimonials{
+        flex-direction: column;
+    } 
+     .left-t>:nth-child(2),
+    .left-t>:nth-child(2){
+        font-size: xx-large;
+    }
+    .right-t{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+    .right-t>div{
+        position: relative;
+        display: none;
+    }
+    .right-t>img{
+        top: 0;
+        right: 0;
+        position: relative;
+        align-self:center ;
+    }
+    .right-t:last-child{
+        display: block;
+        bottom: 0;
+        left: 0;
+    }
+}
